<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp" >
    
    <TextView android:id="@+id/change_pass_prompt"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/text_change_password_colon"
        android:textSize="25sp" />
    
    <EditText android:id="@+id/change_pass_old"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/text_old_password" 
        android:layout_below="@+id/change_pass_prompt"
        android:textSize="25sp"/>
    
    <EditText android:id="@+id/change_pass_new1"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/text_new_password"
        android:layout_below="@+id/change_pass_old"
        android:textSize="25sp"/>
    
    <EditText android:id="@+id/change_pass_new2"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/text_confirm_password"
        android:layout_below="@+id/change_pass_new1"
        android:textSize="25sp"/>

</RelativeLayout>
