<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <EditText android:id="@+id/pwOld"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/text_old_password"
        android:layout_alignParentTop="true"/>
    
    <EditText android:id="@+id/pwNew1"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/text_new_password"
        android:layout_below="@+id/pwOld"/>
    
    <EditText android:id="@+id/pwNew2"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/text_confirm_password"
        android:layout_below="@+id/pwNew1"/>

</RelativeLayout>
