<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="380dp"
    tools:context=".NewMeetingActivity" >

    <TextView
        android:id="@+id/new_edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="75sp" />

    <DigitalClock
        android:id="@+id/new_edit_clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_edit_title"
        android:layout_centerHorizontal="true"
        android:textSize="50sp" />

    <RelativeLayout
        android:id="@+id/new_edit_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/new_edit_clock"
        android:layout_toLeftOf="@+id/new_edit_blank_center" >

        <TextView
            android:id="@+id/new_edit_left_title_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignBottom="@+id/new_edit_left_title_value"
            android:text="@string/text_title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/new_edit_left_colon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/new_edit_left_colon2"
            android:layout_alignBottom="@+id/new_edit_left_title_value"
            android:text="@string/text_colon"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/new_edit_left_title_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/new_edit_left_delete_button"
            android:layout_toRightOf="@+id/new_edit_left_colon1"
            android:ems="15"
            android:inputType="text"
            android:text="@string/text_spontaneous"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/new_edit_left_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/new_edit_left_title_value"
            android:layout_marginLeft="5sp"
            android:background="@drawable/selector_imageview"
            android:contentDescription="@string/description_delete"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:onClick="delete"
            android:src="@drawable/icon_discard" />

        <TextView
            android:id="@+id/new_edit_left_description_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignBottom="@+id/new_edit_left_description_value"
            android:text="@string/text_description"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/new_edit_left_colon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/new_edit_left_description_field"
            android:layout_alignBottom="@+id/new_edit_left_description_value"
            android:text="@string/text_colon"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/new_edit_left_description_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/new_edit_left_colon2"
            android:layout_below="@+id/new_edit_left_title_value"
            android:ems="15"
            android:inputType="text"
            android:hint="@string/text_no_description"
            android:textSize="24sp" />

        <RelativeLayout
            android:id="@+id/new_edit_left_time_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/new_edit_left_description_field" >

            <TextView
                android:id="@+id/new_edit_left_start_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/text_start"
                android:textSize="24sp" />

            <TimePicker
                android:id="@+id/new_edit_left_time_picker_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/new_edit_left_start_text" />

            <TextView
                android:id="@+id/new_edit_left_end_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/new_edit_left_time_picker_end"
                android:text="@string/text_end"
                android:textSize="24sp" />

            <TimePicker
                android:id="@+id/new_edit_left_time_picker_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/new_edit_blank_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/text_blank" />

    <RelativeLayout
        android:id="@+id/new_edit_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/new_edit_clock"
        android:layout_toRightOf="@+id/new_edit_blank_center" >

        <TextView
            android:id="@+id/new_edit_right_available_times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/text_available_time"
            android:textSize="24sp" />

        <ListView
            android:id="@+id/new_edit_right_interval_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/new_edit_right_button_wrap"
            android:layout_below="@+id/new_edit_right_available_times" />

        <RelativeLayout
            android:id="@+id/new_edit_right_button_wrap"
            android:layout_width="match_parent"
            android:layout_height="75sp"
            android:layout_alignParentBottom="true" >

            <TextView
                android:id="@+id/new_edit_right_add_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/new_edit_right_blank_center"
                android:background="@drawable/button_custom"
                android:clickable="true"
                android:gravity="center"
                android:onClick="add"
                android:text="@string/text_add"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/new_edit_right_update_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/new_edit_right_blank_center"
                android:background="@drawable/button_custom"
                android:clickable="true"
                android:gravity="center"
                android:onClick="update"
                android:text="@string/text_update"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/new_edit_right_blank_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/text_blank" />

            <TextView
                android:id="@+id/new_edit_right_cancel_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/new_edit_right_blank_center"
                android:background="@drawable/button_custom"
                android:clickable="true"
                android:gravity="center"
                android:onClick="cancel"
                android:text="@string/text_cancel"
                android:textSize="24sp" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>